gitops/policies/require-drop-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-drop-capabilities
spec:
  validationFailureAction: Enforce
  rules:
    - name: drop-all-capabilities
      match:
        any:
        - resources:
            kinds:
              - Pod
      exclude:
        any:
        - resources:
            namespaceSelector:
              matchLabels:
                policy-enforcement: "false"
      validate:
        message: "Containers must drop ALL capabilities."
        pattern:
          spec:
            =(ephemeralContainers):
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
            =(initContainers):
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
